<?xml version="1.0"?>
<package>
  <name>aamfsd_gazebo</name>
  <version>0.1.0</version>
  <description>The aamfsd_gazebo package</description>


  <maintainer email="mohamedali.aga@gmail.com">Mohamed Ghareeb</maintainer>
  <license>BSD</license>


  <url type="repository">https://github.com/ghareeb97/aamfsd_sim</url>
  <url type="bugtracker">https://github.com/ghareeb97/aamfsd_sim/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>aamfsd_description</build_depend>
  <build_depend>robot_control</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>aamfsd_description</run_depend>
  <run_depend>robot_control</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>


  <export>
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
  </export>
  
</package>
